--- a/files/ui/advancedpage.ui
+++ b/files/ui/advancedpage.ui
@@ -1426,6 +1426,16 @@ True: In non-combat mode camera is positioned behind the character's shoulder. C
 			</property>
 		   </widget>
 		  </item>
+      <item row="5" column="1">
+        <widget class="QCheckBox" name="disableDisplayList">
+          <property name="toolTip">
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Makes OpenMW VR disable display lists when multiview is enabled. This is necessary on some platforms to use the multiview feature, but may penalize performance. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="text">
+            <string>Disable display lists.</string>
+          </property>
+        </widget>
+      </item>
 		  <item row="6" column="0">
 		   <widget class="QCheckBox" name="preferDirectXSwapchains">
 			<property name="toolTip">
