--- a/files/ui/advancedpage.ui
+++ b/files/ui/advancedpage.ui
@@ -1397,6 +1397,16 @@ True: In non-combat mode camera is positioned behind the character's shoulder. C
 		   </widget>
 		  </item>
 				<item row="3" column="0">
+				  <widget class="QCheckBox" name="leftHandedMode">
+					<property name="toolTip">
+					  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Makes OpenMW VR handed modes where this has been implemented.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+					</property>
+					<property name="text">
+					  <string>Left handed mode.</string>
+					</property>
+				  </widget>
+				</item>
+				<item row="4" column="0">
 				  <widget class="QCheckBox" name="preferSRGBSwapchains">
 					<property name="toolTip">
 					  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Makes OpenMW VR use sRGB format for its swapchain textures if available. Needed for some headsets that don't play nice without sRGB. Enable this if the game seems much brighter in your headset than what's shown on the mirror texture.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -1406,7 +1416,7 @@ True: In non-combat mode camera is positioned behind the character's shoulder. C
 					</property>
 				  </widget>
 				</item>
-		  <item row="4" column="0">
+		  <item row="5" column="0">
 		   <widget class="QCheckBox" name="useSharedShadowMaps">
 			<property name="toolTip">
 			 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Makes OpenMW VR map shadows for both eyes in one pass, instead of once per eye. This is a significant performance benefit, and should only be disabled for debugging or masochism purposes.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -1416,7 +1426,7 @@ True: In non-combat mode camera is positioned behind the character's shoulder. C
 			</property>
 		   </widget>
 		  </item>
-		  <item row="5" column="0">
+		  <item row="6" column="0">
 		   <widget class="QCheckBox" name="useMultiview">
 			<property name="toolTip">
 			 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Makes OpenMW VR render stereo using the OVR_MultiView2 extension to OpenGL instead of two render passes. You may need to disable this on older GPUs. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -1426,7 +1436,7 @@ True: In non-combat mode camera is positioned behind the character's shoulder. C
 			</property>
 		   </widget>
 		  </item>
-      <item row="5" column="1">
+      <item row="6" column="1">
         <widget class="QCheckBox" name="disableDisplayList">
           <property name="toolTip">
             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Makes OpenMW VR disable display lists when multiview is enabled. This is necessary on some platforms to use the multiview feature, but may penalize performance. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -1436,7 +1446,7 @@ True: In non-combat mode camera is positioned behind the character's shoulder. C
           </property>
         </widget>
       </item>
-		  <item row="6" column="0">
+		  <item row="7" column="0">
 		   <widget class="QCheckBox" name="preferDirectXSwapchains">
 			<property name="toolTip">
 			 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Makes OpenMW VR use DirectX swapchains even if OpenGL swapchains are available. Note that OpenMW will always fall back to DirectX swapchains if OpenGL swapchains are not available. This option exists to debug/work around runtimes with bad OpenGL implementations.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -1446,7 +1456,7 @@ True: In non-combat mode camera is positioned behind the character's shoulder. C
 			</property>
 		   </widget>
 		  </item>
-		  <item row="7" column="0">
+		  <item row="8" column="0">
 		   <widget class="QCheckBox" name="logAllXrCalls">
 			<property name="toolTip">
 			 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Makes OpenMW VR log every single OpenXR call. This degrades performance and creates a massive log. You probably want this disabled.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -1456,7 +1466,7 @@ True: In non-combat mode camera is positioned behind the character's shoulder. C
 			</property>
 		   </widget>
 		  </item>
-		  <item row="8" column="0">
+		  <item row="9" column="0">
 		   <widget class="QCheckBox" name="ignoreXrErrors">
 			<property name="toolTip">
 			 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Makes OpenMW VR ignore unsuccessful calls to OpenXR. You probably want this enabled.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
